20. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- cdrom/dvd volume name at win32 fixed
	- option "detect cdrom/dvd media name after mount" at win32 removed (not nessary)
	- set default value for cdrom device

19. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- pcre replaced by QRegExp
	- version adjusted
	- parsing date fixed (missing old format2 added: "Apr.12 15:43 2001"
	- searching date added (start, end, start+end)
	- option "detect cdrom/dvd media name after mount" added

17. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- option for debug output on console added
	- string converstion on save fixed

16. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- xml encoding detection added
	- save new catalog in UTF8
	- current author in about dialog changed
	- translation update

28. Nov 2010 Christoph Thielecke <crissi99@gmx.de>

	- support for (dead) symbolic links and system files improved (thanks to Bernard Valentin)

28. Nov 2010 Christoph Thielecke <crissi99@gmx.de>

	- parsing avi header fixed (thanks to Niels Horn)

25. Nov 2010 Christoph Thielecke <crissi99@gmx.de>

	- allow "<", ">" and '"' in comments (thanks to Niels Horn)

	- crash if clicking on the "catalog" in the left panel fixed (thanks to Niels Horn)

	- format dates with leading zero (thanks to Niels Horn)

	- typos fixed (thanks to Niels Horn)

	- translations updated

	- compile fix for qt < 4.6.0 added

25. Nov 2010 Christoph Thielecke <crissi99@gmx.de>

	- fixed wrong encoding on reading

	- crash when adding new media fixed (thanks to Bernard Valentin)

24. Nov 2010 Christoph Thielecke <crissi99@gmx.de>

	- ChangeLog added

	- double click on folder at display view fixed (thanks to Niels Horn)

	- details are not shown for an item when clicking on it fixed (thanks to Niels Horn)

	- segfault at saving catalog fixed

	- win32 fixes (thanks to noragen)

	- string termination correction at mp3tag (based on patch from debian (http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=358929))
