@@ -1,3 +1,7 @@
+21. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
+	- detect uncompressed file size added
+	- test for enough memory at catalog reading added
+
 20. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- cdrom/dvd volume name at win32 fixed
 	- option "detect cdrom/dvd media name after mount" at win32 removed (not nessary)
